--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -124,6 +124,8 @@
     \caption{生成极值区域树的示例图}
     \label{fig.c2_er_tree}
     \end{figure*}
+    
+    基于极值区域的方法是基于连通部件类方法中的另外一个比较经典和常见的文字检测方法。首先在文字检测方法中应用到最稳定极值区域MSER并获得显著的检测效果的是Neumann等\cite{Neumann2010A}提出的方法。而且Neumann在其后续研究如\cite{Neumann2011Text}里坚持依据MSER算法来提升文字检测算法的效果。MSER算法的原理如下：首先极值区域ER的概念即是区域外像素灰度值全部大于区域内部所有像素的区域，然后最稳定极值区域MSER便是在极值区域ER的基础上的图像分割方法。因为我们预设了候选文字目标的颜色均一并显著不同于背景，所以在对图像进行连续多个阈值的分割时，候选文字的目标区域面积会在一定阈值范围内呈现非常小的变化。接下来Neumann又在方法\cite{Neumann2012Real}中反过来利用极值区域ER取代MSER以提取候选文字的连通部件，这是因为MSER对于一些模糊或光照过强的场景太敏感而漏检掉了候选文字部件，但ER却可以尽可能多的考虑到所有的连通部件，因为ER本来涵盖了MSER中所有的结果。生成ER树的过程如图\ref{fig.c2_er_tree}(b)所示，其原理类似于图\ref{fig.c2_er_tree}(a)的分水岭算法。在这类算法中，主要是利用ER树提取候选的文字部件，然后求取连通部件的空洞面积、欧拉数、水平交叉数目以及紧密度等特征，来训练SVM分类器以分类背景和文字。最后通过穷举搜索以将保留下来的连通部件排列成单词结果。
 
     \begin{table*}[!h]
     \centering
