--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -112,6 +112,8 @@
     
     Epshetein等\cite{Epshtein2010Detecting}提出用笔画宽度变换方法SWT来检测文字，促进了基于边缘（是连通部件中的一种）的文字检测算法的研究。这个方法根据图像里的文字笔画的宽度通常较为均一的属性，来过滤掉非文字边缘的像素。该方法首先利用Canny算子在场景文字图像的灰度图上求取图像中各目标的边缘，然后执行笔画宽度转换算法来计算笔画宽度图，其关键思路为：以边缘上的每个像素点为起始位置，沿该起始位置的梯度正负方向出发进行搜索，以找到梯度方向与起始位置点的方向近似相反的另一个边缘点，那么标记两像素点间的距离即为这个边缘的笔画宽度。在笔画宽度转换之后，再利用连通部件方法聚合起具有相近笔画宽度的像素点，以生成候选文字区域并方便后续的连通部件分析。最后使用启发性规则，例如欧拉数、宽高比等特征来过滤以得到真实文字区域。
     
+    Yu等\cite{Yu2016Scene}是另一种基于边缘的文字检测方法。在该方法中，Yu等人提出了一种基于边缘重组、边缘滤波和多通道处理的自然场景图像文本检测与定位方法。为了从背景中分割出文本，在边缘分析过程中首先将边缘分割为一个个单独的边缘段，然后将这些边缘段重新组合到候选字符的连通部件上，并利用边缘滤波器滤除大部分的背景边缘，那么剩余下来的候选字符边缘将被链接到候选文本行上即得到定位结果。文中使用两种不同的分类器来过滤掉非文本行，并且为了更准确地进行分类，作者首先将提取到的特征存储在特征池中，然后利用SVM从特征池中选择最有效的特征来训练分类器。最后多通道用于确保文字检测查全率，而非极大抑制用来消除重复结果。
+    
     \begin{figure*}[!h]
     \centering
     \includegraphics[width=\textwidth]{./figures/c2_er_tree.jpg}
