--- a/bibliography.bib
+++ b/bibliography.bib
@@ -175,6 +175,14 @@
   year={2014},
 }
 
+@inproceedings{Zitnick2014Edge,
+  title={Edge Boxes: Locating Object Proposals from Edges},
+  author={Zitnick, C. Lawrence and Dollár, Piotr},
+  booktitle={European Conference on Computer Vision},
+  pages={391-405},
+  year={2014},
+}
+
 @inproceedings{Sung2015Scene,
   title={Scene text detection with robust character candidate extraction method},
   author={Sung, Myung Chul and Jun, Bongjin and Cho, Hojin and Kim, Daijin},
