--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -100,8 +100,6 @@
     \esection{Connected Component-based Method}
 
     基于连通部件的检测方法，将文字看做是一些连通部件的集合，所以这类方法是把连通部件作为处理对象的文字检测算法。这种基于连通部件来检测场景图像中文字的原理是：因为文字之间的笔画、纹理、对比度以及颜色等特征具有一致性，所以可通过笔画宽度转换、图像分割或最稳定极值区域提取等处理，来把候选文字的像素组成一系列的连通部件。
-    
-    如图\ref{fig.c2_cca_based}所示，这是一个典型的基于连通部件的检测方法的流程示例。在此类方法的流程中，通常首先会标记可能同属一个字符连通部件的像素，然后在分割连通部件的阶段通过把文字从背景中分离出来而得到候选的文字部件；接着在分析连通部件的阶段，首先提取笔画、几何、边缘及颜色等这些基于连通部件的特征，然后利用分类器来过滤掉非文字的部件；最后留下来的文字检测结果作为输出。
 
     \begin{figure}[!h]
     \centering
@@ -109,10 +107,32 @@
     \caption{基于连通部件的文字检测方法的流程示例}
     \label{fig.c2_cca_based}
     \end{figure}
-    
+
+    如图\ref{fig.c2_cca_based}所示，这是一个典型的基于连通部件的检测方法的流程示例。在此类方法的流程中，通常首先会标记可能同属一个字符连通部件的像素，然后在分割连通部件的阶段通过把文字从背景中分离出来而得到候选的文字部件；接着在分析连通部件的阶段，首先提取笔画、几何、边缘及颜色等这些基于连通部件的特征，然后利用分类器来过滤掉非文字的部件；最后留下来的文字检测结果作为输出。
+
     Epshetein等\cite{Epshtein2010Detecting}提出用笔画宽度变换方法SWT来检测文字，促进了基于边缘（是连通部件中的一种）的文字检测算法的研究。这个方法根据图像里的文字笔画的宽度通常较为均一的属性，来过滤掉非文字边缘的像素。该方法首先利用Canny算子在场景文字图像的灰度图上求取图像中各目标的边缘，然后执行笔画宽度转换算法来计算笔画宽度图，其关键思路为：以边缘上的每个像素点为起始位置，沿该起始位置的梯度正负方向出发进行搜索，以找到梯度方向与起始位置点的方向近似相反的另一个边缘点，那么标记两像素点间的距离即为这个边缘的笔画宽度。在笔画宽度转换之后，再利用连通部件方法聚合起具有相近笔画宽度的像素点，以生成候选文字区域并方便后续的连通部件分析。最后使用启发性规则，例如欧拉数、宽高比等特征来过滤以得到真实文字区域。
+
+    Yu等\cite{Yu2016Scene}是另一种基于边缘的文字检测方法。在该方法中，Yu等人提出了一种基于边缘重组、边缘滤波和多通道处理的自然场景图像文本检测与定位方法。为了从背景中分割出文本，在边缘分析过程中首先将边缘分割为一个个单独的边缘段，然后将这些边缘段重新组合到候选字符的连通部件上，并利用边缘滤波器滤除大部分的背景边缘，那么剩余下来的候选字符边缘将被链接到候选文本行上即得到定位结果。文中使用两种不同的分类器来过滤掉非文本行，并且为了更准确地进行分类，作者首先将提取到的特征存储在特征池中，然后利用SVM从特征池中选择最有效的特征来训练分类器。最后多通道用于确保文字检测查全率，而非极大抑制用来消除重复结果。   
+
+    \begin{figure*}[!h]
+    \centering
+    \includegraphics[width=\textwidth]{./figures/c2_sf_vs_canny.jpg}
+    \begin{minipage}[t]{0.32\linewidth}
+    \centerline{ \small (a) 原图}
+    \end{minipage}
+    \begin{minipage}[t]{0.32\linewidth}
+    \centerline{ \small (b) 结构化边缘图}
+    \end{minipage}
+    \begin{minipage}[t]{0.32\linewidth}
+    \centerline{ \small (a) Canny边缘}
+    \end{minipage}
+    \caption{基于结构化边缘检测算子和基于Canny边缘检测算子的结果对比}
+    \label{fig.c2_sf_vs_canny}
+    \end{figure*}
+
+    上述基于连通部件的方法中，对文字边缘的检测大多使用Canny算子。而Dollar等\cite{Dollar2015Fast}提出一种新的结构化的边缘检测子。在这篇文章中，作者利用局部图像块中存在的结构来学习得到精确和高效的边缘检测器，并提出了一个应用于随机决策森林的结构化学习框架来预目标边缘掩码的问题。如图       \ref{fig.c2_sf_vs_canny}(b)所示，用结构化边缘检测子求取的边缘图要比Canny算子得到的如图\ref{fig.c2_sf_vs_canny}(c) 边缘图鲁棒且清晰得多。
     
-    Yu等\cite{Yu2016Scene}是另一种基于边缘的文字检测方法。在该方法中，Yu等人提出了一种基于边缘重组、边缘滤波和多通道处理的自然场景图像文本检测与定位方法。为了从背景中分割出文本，在边缘分析过程中首先将边缘分割为一个个单独的边缘段，然后将这些边缘段重新组合到候选字符的连通部件上，并利用边缘滤波器滤除大部分的背景边缘，那么剩余下来的候选字符边缘将被链接到候选文本行上即得到定位结果。文中使用两种不同的分类器来过滤掉非文本行，并且为了更准确地进行分类，作者首先将提取到的特征存储在特征池中，然后利用SVM从特征池中选择最有效的特征来训练分类器。最后多通道用于确保文字检测查全率，而非极大抑制用来消除重复结果。
+    基于极值区域的方法是基于连通部件类方法中的另外一个比较经典和常见的文字检测方法。首先在文字检测方法中应用到最稳定极值区域MSER并获得显著的检测效果的是Neumann等\cite{Neumann2010A}提出的方法。而且Neumann在其后续研究如\cite{Neumann2011Text}里坚持依据MSER算法来提升文字检测算法的效果。MSER算法的原理如下：首先极值区域ER的概念即是区域外像素灰度值全部大于区域内部所有像素的区域，然后最稳定极值区域MSER便是在极值区域ER的基础上的图像分割方法。因为我们预设了候选文字目标的颜色均一并显著不同于背景，所以在对图像进行连续多个阈值的分割时，候选文字的目标区域面积会在一定阈值范围内呈现非常小的变化。
     
     \begin{figure*}[!h]
     \centering
@@ -127,7 +147,7 @@
     \label{fig.c2_er_tree}
     \end{figure*}
     
-    基于极值区域的方法是基于连通部件类方法中的另外一个比较经典和常见的文字检测方法。首先在文字检测方法中应用到最稳定极值区域MSER并获得显著的检测效果的是Neumann等\cite{Neumann2010A}提出的方法。而且Neumann在其后续研究如\cite{Neumann2011Text}里坚持依据MSER算法来提升文字检测算法的效果。MSER算法的原理如下：首先极值区域ER的概念即是区域外像素灰度值全部大于区域内部所有像素的区域，然后最稳定极值区域MSER便是在极值区域ER的基础上的图像分割方法。因为我们预设了候选文字目标的颜色均一并显著不同于背景，所以在对图像进行连续多个阈值的分割时，候选文字的目标区域面积会在一定阈值范围内呈现非常小的变化。接下来Neumann又在方法\cite{Neumann2012Real}中反过来利用极值区域ER取代MSER以提取候选文字的连通部件，这是因为MSER对于一些模糊或光照过强的场景太敏感而漏检掉了候选文字部件，但ER却可以尽可能多的考虑到所有的连通部件，因为ER本来涵盖了MSER中所有的结果。生成ER树的过程如图\ref{fig.c2_er_tree}(b)所示，其原理类似于图\ref{fig.c2_er_tree}(a)的分水岭算法。在这类算法中，主要是利用ER树提取候选的文字部件，然后求取连通部件的空洞面积、欧拉数、水平交叉数目以及紧密度等特征，来训练SVM分类器以分类背景和文字。最后通过穷举搜索以将保留下来的连通部件排列成单词结果。
+    接下来Neumann又在方法\cite{Neumann2012Real}中反过来利用极值区域ER取代MSER以提取候选文字的连通部件，这是因为MSER对于一些模糊或光照过强的场景太敏感而漏检掉了候选文字部件，但ER却可以尽可能多的考虑到所有的连通部件，因为ER本来涵盖了MSER中所有的结果。生成ER树的过程如图\ref{fig.c2_er_tree}(b)所示，其原理类似于图\ref{fig.c2_er_tree}(a)的分水岭算法。在这类算法中，主要是利用ER树提取候选的文字部件，然后求取连通部件的空洞面积、欧拉数、水平交叉数目以及紧密度等特征，来训练SVM分类器以分类背景和文字。最后通过穷举搜索以将保留下来的连通部件排列成单词结果。
 
     \begin{table*}[!h]
     \centering
@@ -144,6 +164,8 @@
     \end{tabular}
     \label{tab.c2_connected_component_based}
     \end{table*}
+
+
 
     \section{本章小结}
     \esection{Brief Summary}
