--- a/pages/chapter2.tex
+++ b/pages/chapter2.tex
@@ -130,9 +130,7 @@
     \label{fig.c2_sf_vs_canny}
     \end{figure*}
 
-    上述基于连通部件的方法中，对文字边缘的检测大多使用Canny算子。而Dollar等\cite{Dollar2015Fast}提出一种新的结构化的边缘检测子。在这篇文章中，作者利用局部图像块中存在的结构来学习得到精确和高效的边缘检测器，并提出了一个应用于随机决策森林的结构化学习框架来预目标边缘掩码的问题。如图       \ref{fig.c2_sf_vs_canny}(b)所示，用结构化边缘检测子求取的边缘图要比Canny算子得到的如图\ref{fig.c2_sf_vs_canny}(c) 边缘图鲁棒且清晰得多。
-    
-    基于极值区域的方法是基于连通部件类方法中的另外一个比较经典和常见的文字检测方法。首先在文字检测方法中应用到最稳定极值区域MSER并获得显著的检测效果的是Neumann等\cite{Neumann2010A}提出的方法。而且Neumann在其后续研究如\cite{Neumann2011Text}里坚持依据MSER算法来提升文字检测算法的效果。MSER算法的原理如下：首先极值区域ER的概念即是区域外像素灰度值全部大于区域内部所有像素的区域，然后最稳定极值区域MSER便是在极值区域ER的基础上的图像分割方法。因为我们预设了候选文字目标的颜色均一并显著不同于背景，所以在对图像进行连续多个阈值的分割时，候选文字的目标区域面积会在一定阈值范围内呈现非常小的变化。
+    上述基于连通部件的方法中，对文字边缘的检测大多使用Canny算子。而Dollar等\cite{Dollar2015Fast}提出一种新的结构化的边缘检测子。在这篇文章中，作者利用局部图像块中存在的结构来学习得到精确和高效的边缘检测器，并提出了一个应用于随机决策森林的结构化学习框架来预目标边缘掩码的问题。如图       \ref{fig.c2_sf_vs_canny}(b)所示，用结构化边缘检测子求取的边缘图要比Canny算子得到的如图\ref{fig.c2_sf_vs_canny}(c) 边缘图鲁棒且清晰得多。而进一步的，Zitnick等\cite{Zitnick2014Edge}提出的就是基于这种结构化边缘的目标检测方法，叫做edgebox边缘包围盒算法。作者认为边缘能够提供图像的稀疏但信息丰富的表示，因此这篇文章利用完全包含在包围盒中的边缘数目来指示该包围盒包含对象的概率。而这种目标检测方法也可以通过改进而应用到文字边缘的检测方法中，这部分内容会在第\ref{sec.c3_skeleton}节中作详细论述。
     
     \begin{figure*}[!h]
     \centering
@@ -146,6 +144,8 @@
     \caption{生成极值区域树的示例图}
     \label{fig.c2_er_tree}
     \end{figure*}
+    
+    基于极值区域的方法是基于连通部件类方法中的另外一个比较经典和常见的文字检测方法。首先在文字检测方法中应用到最稳定极值区域MSER并获得显著的检测效果的是Neumann等\cite{Neumann2010A}提出的方法。而且Neumann在其后续研究如\cite{Neumann2011Text}里坚持依据MSER算法来提升文字检测算法的效果。MSER算法的原理如下：首先极值区域ER的概念即是区域外像素灰度值全部大于区域内部所有像素的区域，然后最稳定极值区域MSER便是在极值区域ER的基础上的图像分割方法。因为我们预设了候选文字目标的颜色均一并显著不同于背景，所以在对图像进行连续多个阈值的分割时，候选文字的目标区域面积会在一定阈值范围内呈现非常小的变化。
     
     接下来Neumann又在方法\cite{Neumann2012Real}中反过来利用极值区域ER取代MSER以提取候选文字的连通部件，这是因为MSER对于一些模糊或光照过强的场景太敏感而漏检掉了候选文字部件，但ER却可以尽可能多的考虑到所有的连通部件，因为ER本来涵盖了MSER中所有的结果。生成ER树的过程如图\ref{fig.c2_er_tree}(b)所示，其原理类似于图\ref{fig.c2_er_tree}(a)的分水岭算法。在这类算法中，主要是利用ER树提取候选的文字部件，然后求取连通部件的空洞面积、欧拉数、水平交叉数目以及紧密度等特征，来训练SVM分类器以分类背景和文字。最后通过穷举搜索以将保留下来的连通部件排列成单词结果。
 
