--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -23,8 +23,14 @@
 \chapter{基于边缘骨架切割的文字检测方法}
 \echapter{Text detection based on Skeleton-cut detector}
 
+    边缘是一种可以很好地表征文字结构信息的特征。但是想要在自然场景图片的背景中分离出来文字边缘是一件极具困难的工作，其中最有挑战性的问题是如何解决边缘粘连（edge-adhesion）问题。针对这种边缘粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法。
+
     \section{问题的提出}
     \esection{Questions Posed}
+
+    基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分理出连通区域，并且过于依赖图像分割算法的结果。
+    
+    
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
