--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -28,9 +28,11 @@
     \section{问题的提出}
     \esection{Questions Posed}
 
-    基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分理出连通区域，并且过于依赖图像分割算法的结果。
-    
-    
+    基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分理出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
+
+    在基于区域的文字检测方法中主要有基于MSER和基于边缘的这两类主流方法。MSER类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
+
+    依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
@@ -254,7 +256,7 @@
         \label{eq:c3_concentration_ratio}
         \end{equation}
 
-        其中，$skel_{ol}$是边缘骨架$skel$ 重叠的部分，即$skel_{ol}=skel(sum_{ver}(skel)>1)$。 而$Sum_{ver}(skel)$是按竖直方向将边缘骨架$skel$ 累加起来，如图\ref{fig.c3_concentration_ratio}(c) 所示：红线代表竖直方向累加像素点的个数为1 的阈值线，那么超过红线的位部分，表示该位置上存在重叠的边缘骨架$skel_{ol}$，即在$skel_{ol}$ 中 $Sum_{ver}(skel)>1$。 通过对图\ref{fig.c3_concentration_ratio}(c) 的观察，文字边缘骨架绝大部分都是重叠的，也就是$skel_{ol}$ 的长度占$skel$ 长度的比率$C(skel)$ 较大，因此较大的比率$C(skel)$ 表征了文字边缘骨架具有更高的聚合度。与此同时，观察发现非文字边缘骨架只有很小一部分是重叠的，即$skel_{ol}$ 的长度占$skel$ 长度的比率$C(skel)$ 很小，所以小$C(skel)$ 表征了非文字边缘骨架的聚合度更小。
+        其中，$skel_{ol}$是边缘骨架$skel$ 重叠的部分，即$skel_{ol}=skel(sum_{ver}(skel)>1)$。 而$Sum_{ver}(skel)$ 是按竖直方向将边缘骨架$skel$ 累加起来，如图\ref{fig.c3_concentration_ratio}(c) 所示：红线代表竖直方向累加像素点的个数为1 的阈值线，那么超过红线的位部分，表示该位置上存在重叠的边缘骨架$skel_{ol}$，即在$skel_{ol}$ 中 $Sum_{ver}(skel)>1$。 通过对图\ref{fig.c3_concentration_ratio}(c) 的观察，文字边缘骨架绝大部分都是重叠的，也就是$skel_{ol}$ 的长度占$skel$ 长度的比率$C(skel)$ 较大，因此较大的比率$C(skel)$ 表征了文字边缘骨架具有更高的聚合度。与此同时，观察发现非文字边缘骨架只有很小一部分是重叠的，即$skel_{ol}$ 的长度占$skel$ 长度的比率$C(skel)$ 很小，所以小$C(skel)$ 表征了非文字边缘骨架的聚合度更小。
 
         通过在第1阶段分类过程中，采用上述的这些简单的形态学限制，包括本文新提出的针对文字边缘骨架特征的聚合度限制，绝大多数非文字的边缘骨架就可以被高效的过滤掉。但是可能存在一些与文字边缘骨架极为相近的非文字边缘骨架没有在形态学过滤阶段被排除。那么这些被遗漏的非文字边缘骨架，就将在后续的第2 阶段分类过程中进行过滤。
 
@@ -273,7 +275,7 @@
 
         而在测试阶段，首先用基于Skeleton-cut 的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang 等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$ 的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
 
-        最终，经过2层卷积和池化的响应输入到SVM 分类器，由此得到候选文字边缘骨架集合$P$ 中每个候选边缘骨架$p$ 的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$就是基于边缘骨架切割的文字检测方法的结果。集合$B$ 中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
+        最终，经过2层卷积和池化的响应输入到SVM 分类器，由此得到候选文字边缘骨架集合$P$ 中每个候选边缘骨架$p$ 的分类分数。这其中，具有较低文字分类置信度的候选文字边缘骨架将会被删除。那么经过第2阶段过滤后，保留下来的文字边缘骨架包围框的集合$B$ 就是基于边缘骨架切割的文字检测方法的结果。集合$B$ 中的每个文字边缘骨架包围框都有自己相应的分类置信度成绩$C$。
 
     \section{文本行的局部迭代优化}
     \esection{Text line's iteratively local refinement}
@@ -286,7 +288,7 @@
 	\caption{文本行的局部迭代优化算法}
 	\label{alg:c3_iter_local_refine}
 	\begin{algorithmic}[1]
-		\REQUIRE 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER集合 $M$
+		\REQUIRE 候选文字边缘骨架的包围框集合 $B$, 以及求取的MSER 集合 $M$
 		\ENSURE 经过局部迭代优化操作，对定位调整后的包围框集合 $R$
 		\STATE 将MSER集合$M$按照位置分成2 类：强MSER 子集合$S$，是指包含在$B$ 边界内部的MSER 集合；弱MSER 子集合$W$ ，是指位于$B$ 边界之外的MSER 集合
         \FOR {$b \in B$}
@@ -302,13 +304,13 @@
 	\end{algorithmic}
     \end{algorithm}
 
-    其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$ 之间归一化的$L2$距离。而$f$ 是候选MSER 的特征，这些特征包含：$sw$ 是笔划宽度，$c$ 是HSV和灰度的颜色通道，$h,w$是候选MSER的高度和宽度；$yc$ 是候选MSER 在y 坐标轴上的中心坐标；另外函数$ol$用以计算2 个候选MSER 的包围框之间的重叠率；而$T$ 是经过实验计算得出的经验阈值。
+    其中，$Dist_f(s,w)$指的是$s_f$ 和$w_f$ 之间归一化的$L2$ 距离。而$f$ 是候选MSER 的特征，这些特征包含：$sw$ 是笔划宽度，$c$ 是HSV 和灰度的颜色通道，$h,w$是候选MSER的高度和宽度；$yc$ 是候选MSER 在y 坐标轴上的中心坐标；另外函数$ol$用以计算2 个候选MSER 的包围框之间的重叠率；而$T$ 是经过实验计算得出的经验阈值。
 
-    \begin{figure}[!h]
+    \begin{figure*}[!h]
     \centering
     \includegraphics[width=\textwidth]{c3_iter_local_refine.jpg} \caption{局部迭代优化的效果示例}
     \label{fig.c3_iter_local_refine}
-    \end{figure}
+    \end{figure*}
 
     利用局部迭代优化方法来矫正文本行的实验效果如图\ref{fig.c3_iter_local_refine} 所示：图中左边的是未经过局部迭代优化前的文字检测结果，其中用红色矩形框标注的是用基于边缘骨架切割的检测子提取出的候选文字，用蓝色矩形框标注的是用MSER 提出的候选文字；而图中右边的是经过局部迭代优化后得到的文字检测结果，可看出通过算法\ref{alg:c3_iter_local_refine} 将基于边缘骨架切割的文字检测子和基于MSER 的检测方法结合起来，从而追回那些因图像模糊而未被检测到的候选文字。通过文本行局部迭代优化后得到的最终检测结果如图\ref{fig.c3_iter_local_refine} 中右图内的黄色虚线包围框所示，可见包围框的查全率以及同真实结果值之间的重叠率都得到了极大提升。
 
@@ -318,7 +320,7 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$到$3888 \times 2592$)的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f 值，如下列公式所示：
+        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f 值，如下列公式所示：
 
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
@@ -327,9 +329,9 @@
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
-        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时我们提出了2 阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
+        如表\ref{tab.c3_icdar13}所示，本章提出的方法在ICDAR 2013 测试数据集上取得了86.79\%的查准率和76.21\%的查全率。该方法的查全率超过了其它所有的检测方法的查全率，这得益于文字边缘骨架提取方法的良好设计。同时我们提出了2 阶段非文字过滤以及文本行的局部迭代优化策略，以确保本方法的高查准结果。值得一提的是，本方法没有使用传统的图像金字塔上的多尺度滑动窗进行文字与背景的二分类，而是采用文字边缘骨架提取加单尺度的CNN分类判断，因此在保证检测成绩的同时，大幅缩减了计算量和用时。另外，在提出的方法中融入文本行的局部迭代优化(Iteratively Local Refinement，简称ILR)，可以进一步将检测F 值提升3.3\%，并超越其它所有先进的文字检测方法。
 
-        \begin{table}[!h]
+        \begin{table*}[!h]
         \centering
         \caption{在ICDAR 2013上的文字检测效果(\%)}
         \begin{tabular}{p{0.25\textwidth}|p{0.25\textwidth} p{0.25\textwidth} p{0.13\textwidth}}
@@ -347,11 +349,11 @@
         \hline
         \end{tabular}
         \label{tab.c3_icdar13}
-        \end{table}
+        \end{table*}
 
-        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255 张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas 等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\% 减低到53\%，因此牺牲的是文字检测的查全效果。
+        表格\ref{tab.c3_icdar11}展示了本方法与若干先进方法在ICDAR 2011测试数据集上关于字符检出率的量化比较。ICDAR 2011测试数据集包含255 张自然场景图片，里面总共有6309个字符。在进行对比的几种方法中，若对提取到的所有极值区域(Extremal Region，简称为ER)都不判别而直接认定为字符，那么字符的检出率高达96\%。但这样的话提取的候选字符有6 百万之多，计算量过大，并且在这么多的候选字符中真正的字符更难被提取出来，因而查准率极低。如果采用Matas 等\cite{Matas2004Robust}提出的最稳定极值区域(Maximally Stable Extremal Regions，简称为MSER)，则候选字符数目骤降到3 万个，计算量大幅下降，且查准率得到提升。但从检出率的指标来看，该方法的成绩也从96\% 减低到53\%，因此牺牲的是文字检测的查全效果。
 
-        \begin{table}[htbp]
+        \begin{table*}[htbp]
         \centering
         \caption{在ICDAR 2011测试集上对于字符提取数目和检出率的测评}
         \begin{tabular}{p{0.33\textwidth}|p{0.33\textwidth} p{0.25\textwidth}}
@@ -373,11 +375,11 @@
         \hline
         \end{tabular}
         \label{tab.c3_icdar11}
-        \end{table}
+        \end{table*}
 
-        在候选字符数目与字符检出率的折衷方面做的较好的是Sung等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
+        在候选字符数目与字符检出率的折衷方面做的较好的是Sung 等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9 万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung 的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
 
-        \begin{table}[!h]
+        \begin{table*}[!h]
         \centering
         \caption{ 本方法与其它文字检测方法在MSRA-TD500 测试数据集上的检测成绩对比}
         \begin{tabular}{p{0.25\textwidth}|p{0.25\textwidth} p{0.25\textwidth} p{0.13\textwidth}}
@@ -392,9 +394,9 @@
         \hline
         \end{tabular}
         \label{tab.c3_msra}
-        \end{table}
+        \end{table*}
 
-        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82以及F值0.72的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
+        如表格\ref{tab.c3_msra}所示，我们的方法还与其它方法在微软MSRA-TD500 文字检测数据集上进行了对比。本章提出的方法取得了查全0.64，查准0.82以及F 值0.72的检测结果，其成绩显著高于其它方法。微软MSRA-TD500 数据集中的文本大多倾斜、弯曲并由多国语言构成。而从MSRA-TD500 的实验结果上来看，本方法可以在自然场景图像中成功检测到多方向和多语种的文本。
 
         \begin{figure}[!h]
         \centering
