--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -32,7 +32,7 @@
 
     在基于区域的文字检测方法中主要有基于MSER和基于边缘的这两类主流方法。MSER类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
 
-    依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
+    依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8 连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
@@ -377,7 +377,7 @@
         \label{tab.c3_icdar11}
         \end{table*}
 
-        在候选字符数目与字符检出率的折衷方面做的较好的是Sung 等\cite{Sung2015Scene}提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9 万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung 的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
+        在候选字符数目与字符检出率的折衷方面做的较好的是Sung 等\cite{Sung2015Scene} 提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9 万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung 的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
 
         \begin{table*}[!h]
         \centering
@@ -414,5 +414,9 @@
 
     \section{本章小结}
     \esection{Brief Summary}
+
+    本章提出的是基于边缘骨架切割的文字检测方法。首先对于输入的场景文字图片，利用结构化边缘检测方法得到边缘响应图，然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。因此断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于 CNN 的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。
+
+    在公开数据集ICDAR2011，ICDAR2013以及MSRA-TD500上，我们对本章提出的方法都进行了实验，并将实验结果与其它先进方法进行了比较。实验结果证明了该方法的有效性。此外通过分析本章提出的方法，以及针对其文字定位包围盒不够精准的局限，我们将会在下一章中提出基于二叉树搜索的文本行优化方法。
 
 
