--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -23,13 +23,28 @@
 \chapter{基于二叉树搜索的文字检测方法}
 \echapter{Text detection based on Binary Tree Search}
 
+    上一章的文字检测方法，在文字包围盒的定位处理上还不够精准。为了更准确的定位到文字包围盒的位置，本章提出一种基于二叉树搜索（Binary Tree Search，简称BTS）的文字检测方法。BTS算法能够对文字定位包围盒的结果进行优化，从而提升场景文字的检测效果，并方便后续的文字识别处理。
+
     \section{问题的提出}
     \esection{Questions Posed}
+
+    \begin{figure*}[!h]
+    \centering
+    \includegraphics[width=\textwidth]{./figures/c4_overlap.jpg}
+    \begin{minipage}[t]{0.48\linewidth}
+    \centerline{ \small (a) 文字包围盒的高度不满足}
+    \end{minipage}
+    \begin{minipage}[t]{0.48\linewidth}
+    \centerline{ \small (b) 文字包围盒的长度不满足}
+    \end{minipage}
+    \caption{当检测到的包围盒与ground truth的重叠率达到0.5 时，依然可能出现定位不精准的问题}
+    \label{fig.c4_overlap}
+    \end{figure*}
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
 
-    基于二叉树搜索的文字检测方法的具体流程如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene}来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
+    基于二叉树搜索的文字检测方法的具体流程如图\ref{fig.c4_overview} 所示。对于输入的场景文字图片，首先利用上一章提出的基于边缘骨架切割的文字检测子\cite{He2017scene} 来提取粗略的文本行定位结果，如图\ref{fig.c4_overview}(b)所示：其中绿色的文字检测包围框大致覆盖住了文本行存在的位置，然而其定位结果还不够精准。为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，用来对图\ref{fig.c4_overview}(b)中的所有边缘响应进行统计运算，并显示成如图\ref{fig.c4_overview}(c) 所示的响应结果图。在该统计边缘响应图中，我们可以看出文字区域和背景区域间的响应获得了明显的划分：响应越大的区域是文字出现概率更高的位置，响应越微小的区域是背景或其它目标更可能存在的方位。并且从\ref{fig.c4_overview}(c)中还可以看出，各个文本行之间的响应也被明显区分开，因此在文本行响应之间呈现清晰的间隙。
 
     \begin{figure*}[!h]
     \centering
@@ -56,7 +71,7 @@
     \caption{基于二叉树搜索的文本行定位优化的流程图}
     \label{fig.c4_overview}
     \end{figure*}
-    
+
     在得到场景文字图像的统计边缘响应后，为了获得更精准的文字定位结果，需要首先生成大量的候选文本行来覆盖文本行定位的各种可能情况。因此在这里我们通过对统计边缘响应进行水平投影，求取梯度，以及执行非极大值抑制等操作，获得如图\ref{fig.c4_overview}(d)所示的候选文本行，其中红色的线就是分割开各个候选文本行的分割线。值得注意的是，长度更长的红线表明线两边的文本行更应该被分割开来，而长度较短的红线表明该分割线更可能导致文本行的过分割，因此更应该将短线两边的候选文本行融合在一起成为1个单独的文本行。接下来进入本章的核心步骤：如图\ref{fig.c4_overview}(e) 所示，由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果，如图\ref{fig.c4_overview}(f)所示，这也是经过优化后得到的文字细致定位结果，相比于原\ref{fig.c4_overview}(b)的粗略定位结果而言，其文字检测的精度得到了大幅提升。
 
     \section{候选文字行的提取}
@@ -139,7 +154,7 @@
 
         为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$ 上这些对应的位置上不存在文字区域与背景区域间的边界。
 
-        为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$ 由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$ 条红色候选文本行分割线组成。
+        为了便于观察和分析，首先对梯度值$g$ 取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$ 由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$ 条红色候选文本行分割线组成。
 
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
@@ -161,7 +176,7 @@
 
     假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。 其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$ 是分割线$l_i$的置信度，其数值是由$l_i$ 的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
-    然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$ 的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
+    然后假设我们要构建的二叉树型搜索空间$N$ 是由一些结点$n$ 构成的。其中任一结点$n_i$有2 个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$ 的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
     在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$ 中各变量的含义后，由$L$ 构建$N$ 的过程如算法\ref{alg:c4_build_binary_tree} 所示：
 
@@ -183,7 +198,7 @@
         \\\STATE \quad $end \ if$
         \\\STATE \quad $nr_{i}=[LD[1],LD[end]], nv_{i}=max(LC)$
         \\\STATE \quad $//$假设$LC$中的最大值是$lc_t$，其中$t$ 是$lc_t$ 的索引
-        \\\STATE \quad $//$在索引$t$处将$L$分裂成左子集和右子集
+        \\\STATE \quad $//$在索引$t$处将$L$ 分裂成左子集和右子集
         \\\STATE \quad $LD_{l}=\left\{LD[1],...,LD[t]\right\}, LC_{l}=\left\{LC[1],...,LC[t]\right\}$
         \\\STATE \quad $BuildBinaryTree(i,LD_{l},LC_{l})$
         \\\STATE \quad $LD_{r}=\left\{LD[t],...,LD[end]\right\}, LC_{r}=\left\{LC[t],...,LC[end]\right\}$
@@ -255,7 +270,7 @@
         \label{fig.c4_bianry_tree_search}
         \end{figure}
 
-        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
+        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$ 上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
@@ -281,7 +296,7 @@
         \label{fig.c4_search_strategy}
         \end{figure}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -301,16 +316,16 @@
 
         而文字检测的$f$值是查全recall和查准precision的均值。
 
-        此外本章提出的方法还与其它方法在各场景文字图片数据集上进行了识别成绩的对比实验。用以验证识别效果的评判标准来自Wang\cite{Wang2012End}的方法。识别结果包含所有的拉丁文字，但是忽略那些不足3个字符长度的单词。只有当检测到的1个候选文字的包围框与文字定位结果真值(ground truth) 的重叠率(Interaction over Union，简称为IoU)超过50\% 时，该候选文字的识别成绩才被认为是有效的。
+        此外本章提出的方法还与其它方法在各场景文字图片数据集上进行了识别成绩的对比实验。用以验证识别效果的评判标准来自Wang\cite{Wang2012End}的方法。识别结果包含所有的拉丁文字，但是忽略那些不足3个字符长度的单词。只有当检测到的1个候选文字的包围框与文字定位结果真值(ground truth) 的重叠率(Interaction over Union，简称为IoU) 超过50\% 时，该候选文字的识别成绩才被认为是有效的。
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
 
         如表格\ref{tab.c4_icdar13}所示，在自然场景文字图片数据集ICDAR 2013 上，一些最先进的文字检测方法例如Cho\cite{Cho2016Canny} 的方法取得了81.1\%的检测F 值，而我们的方法的检测F 值能达到82.3\%。其中，本章提出的方法取得了75.5\% 的查准率以及高达89.2\% 的查全率。本方法的查全率远高于其它先进的文字检测方法的查全率，原因就在于文本行的二叉树型搜索空间的建立，以及最优文本行搜索策略的执行。
 
-        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
+        值得注意的是本章提出的方法是一种快速的文字检测算法，与Tian\cite{Tian2016Text} 的基于CNN 的文字检测子相比，本方法消耗的是极小的计算量和时间。在ICDAR 2013的数据集中，平均的图像尺寸大约是1200乘以900 个像素大小。而本章提出的方法平均处理一张图像大概只用0.76 秒左右，这其中包括了基于边缘骨架的文字检测子，统计边缘响应以及基于二叉树型搜索空间搜索的文本行优化等步骤的全过程。此外，与我们在上一章提出的方法即He\cite{He2017scene}的文字检测方法相比，本章新提出的基于二叉树搜索的文本行矫正方法，又使F 值提升了近2\%，由此证明该方法的确增强了文字检测的查全效果及查准效果。
 
-        \begin{table}[!h]
+        \begin{table*}[!h]
         \centering
         \caption{在ICDAR 2013上的文字检测效果(\%)}
         \begin{tabular}{p{0.25\textwidth}|p{0.25\textwidth} p{0.25\textwidth} p{0.13\textwidth}}
@@ -328,11 +343,11 @@
         \hline
         \end{tabular}
         \label{tab.c4_icdar13}
-        \end{table}
+        \end{table*}
 
         如表\ref{tab.c4_icdar11}所示，在ICDAR 2011 文字测试数据集上，本章提出的基于二叉树搜索的文字检测方法与上一章提出的He\cite{He2017scene} 的方法，以及其它最先进的的文字检测方法如Cho\cite{Cho2016Canny}、Sung\cite{Sung2015Scene} 等的方法都进行了字符提取数目和检出率的量化对比。从实验结果上来看，本章提出的方法可以在获得最高文字检出率的同时，保证提取的字符数目最少。该实验说明表明，相对于其它先进文字检测方法而言，本章方法都达到更优的文字查全和查准效果的折衷。
 
-        \begin{table}[!h]
+        \begin{table*}[!h]
         \centering
         \caption{在ICDAR 2011测试集上对于字符提取数目和检出率的测评}
         \begin{tabular}{p{0.33\textwidth}|p{0.33\textwidth} p{0.25\textwidth}}
@@ -349,7 +364,7 @@
         \hline
         \end{tabular}
         \label{tab.c4_icdar11}
-        \end{table}
+        \end{table*}
 
         图\ref{fig.c4_recall_proposals}展示的是在本章提出方法的各阶段中，字符检出率与候选字符提取数目的关系折线图。与上一章提出的He\cite{He2017scene} 的方法相比，本章的方法在基于边缘骨架切割的文字检测子的基础上，融入了基于二叉树型搜索空间搜索的文本行定位优化方法。其中，基于二叉树搜索的文本行矫正进一步减少了非文字候选字符的提取数目，同时却提升了候选字符的查全效果。因此本章方法相对上一章方法，字符检出率增高2\%，且提取的候选字符数目能降低10\%。
 
@@ -362,7 +377,7 @@
 
         在第\ref{sec.c4_searching strategies}节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
 
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
         \begin{table*}[!h]
         \centering
@@ -385,7 +400,7 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
 
         \begin{figure}[!h]
         \centering
