--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -27,6 +27,8 @@
 
     \section{问题的提出}
     \esection{Questions Posed}
+    
+    虽然上一章提出的基于边缘骨架切割的文字检测子取得了很高的查全率，但是这些定位到的文字包围盒的重叠可能会达不到要求，而导致文字定位不够精准。尽管重叠率为0.5对于一般目标检测的结果而言是正常的，但对于场景文字检测和识别来说，这种程度的重叠率是不能令人满意的。尤其是当文字包围盒的一个边界被精确地预测到，但另一个边界与ground truth 的差距很大时，重叠率依然可能达到0.5以上，但此时的文字定位效果非常差。如图\ref{fig.c4_overlap}所示，
 
     \begin{figure*}[!h]
     \centering
