--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -28,7 +28,7 @@
     \section{问题的提出}
     \esection{Questions Posed}
     
-    虽然上一章提出的基于边缘骨架切割的文字检测子取得了很高的查全率，但是这些定位到的文字包围盒的重叠可能会达不到要求，而导致文字定位不够精准。尽管重叠率为0.5对于一般目标检测的结果而言是正常的，但对于场景文字检测和识别来说，这种程度的重叠率是不能令人满意的。尤其是当文字包围盒的一个边界被精确地预测到，但另一个边界与ground truth 的差距很大时，重叠率依然可能达到0.5以上，但此时的文字定位效果非常差。如图\ref{fig.c4_overlap}所示，
+    虽然上一章提出的基于边缘骨架切割的文字检测子取得了很高的查全率，但是定位到的文字包围盒的重叠可能达不到要求，而导致文字定位不够精准。尽管重叠率为0.5对于一般目标检测的结果而言是正常的，但对于场景文字检测和识别来说，这种程度的重叠率是不能令人满意的。尤其是当文字包围盒的一个边界被精确地预测到，但另一个边界与ground truth 的差距很大时，重叠率依然可能达到0.5以上，但此时的文字定位效果非常差。如图\ref{fig.c4_overlap}所示，这两个预测的文字包围盒均与真实值达到了0.5之上的重叠面积，且有一条边界（宽或高）是被精确预测到了，但是对于文字来说这种程度的重叠率所检测到的是残缺了很大一部分的结果，因此不能满足文字检测的要求，更无法用作文字识别的输入。但难点是这两个包围盒中都包含有一部分文字，因此它们在上一章方法里的分类器中都没有被过滤掉，故而造成图\ref{fig.c4_overlap} 的问题。
 
     \begin{figure*}[!h]
     \centering
@@ -42,6 +42,8 @@
     \caption{当检测到的包围盒与ground truth的重叠率达到0.5 时，依然可能出现定位不精准的问题}
     \label{fig.c4_overlap}
     \end{figure*}
+    
+    针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR算法），然后对计算得到的SSR求取梯度并执行NMS操作，以获得候选文本行；第2步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
 
     \section{方法原理与步骤}
     \esection{Principle and Summary of The Method}
