--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -423,5 +423,9 @@
 
     \section{本章小结}
     \esection{Brief Summary}
+    
+    本章提出的是基于二叉树搜索的文字检测方法。首先对于输入的场景文字图片，利用上一章提出检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，接着通过对统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于上一章得到的粗略定位结果而言，其文字检测的精度得到了大幅提升。
+    
+    在ICDAR系列测试集以及谷歌街景数据集SVT上，我们将本章提出的方法与其它先进方法以及上一章的方法都做了对比实验。实验结果验证了本章方法的有效性。
 
 
