--- a/master_text.tex
+++ b/master_text.tex
@@ -89,12 +89,12 @@
     %\input{pages/denotation.tex}
 
     \xjtucontent
-        %\input{pages/chapter1.tex}
+        \input{pages/chapter1.tex}
         \input{pages/chapter2.tex}
-        %\input{pages/chapter3.tex}
+        \input{pages/chapter3.tex}
         \input{pages/chapter4.tex}
         %\input{pages/chapter5.tex}
-        %\input{pages/chapter6.tex}
+        \input{pages/chapter6.tex}
     \xjtuendcontent
 
     % 将你要引用的文献的 BibTeX 放入 bibliography.bib
