--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -22,13 +22,14 @@
 
 \chapter{基于边缘骨架切割的文字检测方法}
 \echapter{Text detection based on Skeleton-cut detector}
+\label{sec.c3}
 
     边缘是一种可以很好地表征文字结构信息的特征。但是想要在自然场景图片的背景中分离出来文字边缘是一件极具困难的工作，其中最有挑战性的问题是如何解决边缘粘连（edge-adhesion）问题。针对这种边缘粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法。
 
     \section{问题的提出}
     \esection{Questions Posed}
 
-    基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分理出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
+    基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
 
     在基于区域的文字检测方法中主要有基于MSER和基于边缘的这两类主流方法。MSER类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
 
@@ -271,7 +272,7 @@
         \caption{单尺度卷积神经网络分类器的架构} \label{fig.c3_cnn}
         \end{figure}
 
-        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn}中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN 网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
+        这个CNN网络结构的输入是例如图\ref{fig.c3_cnn} 中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN 网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
 
         而在测试阶段，首先用基于Skeleton-cut 的文字边缘骨架检测子来生成候选的文字边缘骨架集合$P$，以及这些文字边缘骨架相对应的包围框集合$B$。与Wang 等\cite{Wang2012End} 方法中利用滑动窗在原图的多尺度金字塔图像中扫描全图来计算卷积和池化响应不同，本文中要进行卷积处理的图块既不需要扫描全图，也不用因为考虑多尺度文字而在原图的多尺度金字塔图像上扫过滑动窗。本文只要对候选文字边缘骨架集合$B$ 中的每个边缘骨架的图块作分类判别即可，并且对这些图块只需作单尺度$s = height(B)$ 的变化。因此相比较过去的基于滑动窗的CNN分类判别器而言，本文中利用CNN 进行文字与非文字边缘骨架分类的方法要更为高效和省时。
 
@@ -292,7 +293,7 @@
 		\ENSURE 经过局部迭代优化操作，对定位调整后的包围框集合 $R$
 		\STATE 将MSER集合$M$按照位置分成2 类：强MSER 子集合$S$，是指包含在$B$ 边界内部的MSER 集合；弱MSER 子集合$W$ ，是指位于$B$ 边界之外的MSER 集合
         \FOR {$b \in B$}
-        \STATE //本算法的目的是：在文本行方向上，将$b$调整为$b_{exp}$
+        \STATE //本算法的目的是：在文本行方向上，将$b$ 调整为$b_{exp}$
         \STATE 计算位于$b$中的MSER$S$ 的特征均值$ms$
 		\REPEAT
         \STATE $ws:=\left\{ w \in W |\,ol(b_{exp},w)>T_{ol}, | yc_{ms}-yc_w|<T_{yc} \right\}$
@@ -324,7 +325,7 @@
 
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
-        最后文字检测$f$值就是查全recall和查准precision的均值。
+        最后文字检测$f$值就是查全recall和查准precision 的均值。
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
