--- a/pages/chapter1.tex
+++ b/pages/chapter1.tex
@@ -111,4 +111,8 @@
     \section{论文的组织结构}
     \esection{Thesis Structure}
 
-
+    本论文是根据提出、分析然后解决问题的思路来组织内容的，后续的章节安排如下所示：
+    
+    第一章的内容是绪论部分。本章首先对自然场景图像中的文字检测这个研究方向的背景与意义进行介绍，然后对这个领域内的研究现状及其问题进行了调研和分析，接着概述了本论文的研究内容以及组织结构。
+    
+    第二章是论文的相关理论与技术。主要介绍了自然场景图像中的文字检测方法的两大类主流方法：基于区域的方法和基于连通部件的方法。然后各举一些经典方法以分析每类方法的优缺点，从而奠定本文研究工作的理论基础。
