--- a/pages/chapter1.tex
+++ b/pages/chapter1.tex
@@ -116,3 +116,11 @@
     第一章的内容是绪论部分。本章首先对自然场景图像中的文字检测这个研究方向的背景与意义进行介绍，然后对这个领域内的研究现状及其问题进行了调研和分析，接着概述了本论文的研究内容以及组织结构。
     
     第二章是论文的相关理论与技术。主要介绍了自然场景图像中的文字检测方法的两大类主流方法：基于区域的方法和基于连通部件的方法。然后各举一些经典方法以分析每类方法的优缺点，从而奠定本文研究工作的理论基础。
+    
+    第三章是基于边缘骨架切割的文字检测方法。本章首先引出边缘粘连问题这个文字检测领域中的难题，然后开始介绍针对该难题所提出的边缘骨架切割文字检测子的具体实现：包含该方法的原理、步骤以及详述。最后通过在公开数据集上将该方法与其它先进方法进行对比试验来验证方法的精度和时间性能。
+    
+    第四章是基于二叉树搜索的文字行定位优化方法。本章首先指出第三章提出方法可能存在的不足：即文字包围盒的定位重叠率达不到要求，然后详述基于二叉树搜索的文字行定位矫正算法来作改进。最后利用在多个数据集上的实验方法来验证了本章提出方法在文字包围盒定位精度上的提升。
+    
+    第五章是结论和展望：主要是总结全文，并展望了接下来的研究工作。
+    
+    
