--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -165,7 +165,7 @@
 
         在\ref{sec.c3_skeleton} 节中已经阐述，对于边缘响应图，利用不同的分割阈值可以得到相应的二值边缘图。而且分割阈值较大时，二值边缘清晰但粘连问题严重，阈值较小时非文字边缘大部分被消除但是文字边缘也出现断裂问题。因此选择合适的二值边缘图，使得既不会在图中出现过多的背景边缘，又能提供清晰的边缘信息，对后续解决边缘粘连问题至关重要。而观察由二值边缘图所生成的边缘骨架图的形态，就是一种判断所选边缘图是否合适的方式。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c3_select_skeleton.jpg}
         \begin{minipage}[t]{0.48\linewidth}
@@ -176,16 +176,16 @@
         \end{minipage}
         \caption{通过欧拉数的计算，选择出最合适的边缘骨架图}
         \label{fig.c3_select_skeleton}
-        \end{figure}
+        \end{figure*}
 
         如图\ref{fig.c3_select_skeleton}(a) 所示，当分割阈值偏小时，从边缘响应图上分割得到的二值边缘图中混有过多的非文字边缘信息，因此通过细化操作所得的边缘骨架图十分杂乱无序，不能作为解决边缘粘连问题的有效信息。在这种混乱的边缘骨架图上检测到的候选边缘骨架粘连点，数目特别多且分布杂乱。因此，检测到的候选边缘骨架粘连点的数目，在一定程度上可以指示所选二值边缘图和相应的边缘骨架图的合理程度。除此之外，还可以通过对生成的边缘骨架图计算欧拉数，来避免选择不合适的边缘骨架图。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c3_compare_skeleton.jpg}
         \caption{不同的边缘骨架图的连通区域数目稳定，但孔洞数目变化剧烈}
         \label{fig.c3_compare_skeleton}
-        \end{figure}
+        \end{figure*}
 
         欧拉数是二值图像的拓扑特征，其数值是连通区域数目与孔洞数目的差值。由不同的二值边缘图所生成的边缘骨架图，它们的连通区域数目比较稳定，但是孔洞数目的变化很剧烈。如图\ref{fig.c3_compare_skeleton} 所示，过低或过高的分割阈值下的二值边缘图所生成的边缘骨架图的孔洞数与连通区域的数目的差距很大，而正常分割阈值下的边缘骨架图中孔洞数目和连通区域数目的差值则保持在合理范围内。
 
@@ -236,7 +236,7 @@
 
         第1阶段的分类方法是形态学滤除。首先，从图\ref{fig.c3_compare_skeleton}(a) 和图\ref{fig.c3_compare_skeleton}(b) 的对比中，我们可以分析出文字边缘骨架和非文字边缘骨架之间在形态上的不同：背景边缘骨架比较直且分散，而文字边缘骨架则相对而言弯曲且聚合在一起。基于这一观察，大量的非文字边缘骨架就可以通过一些形态学的限制来过滤掉。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{c3_skeleton_samples.jpg}
         \begin{minipage}[t]{0.48\linewidth}
@@ -248,7 +248,7 @@
         \includegraphics[width=\textwidth]{c3_concentration_ratio.jpg}
         \centerline{\small (c) 文字通常比非文字骨架具有更高的聚合度}
         \caption{文字与非文字边缘骨架的聚合度的比较} \label{fig.c3_concentration_ratio}
-        \end{figure}
+        \end{figure*}
 
         这些常用的形态学的限制包括：宽高比，离心率，欧拉数，同时在区域和其最小凸多边形中的像素比例，等等。而在本文中，针对文字边缘骨架和非文字边缘骨架的不同，提出一种简单但高效的形态学限制，即边缘骨架的聚合程度。假设给定边缘骨架$skel$，求取该边缘骨架的聚合度的方式如公式\ref{eq:c3_concentration_ratio} 所示：
 
@@ -266,11 +266,11 @@
 
         第2阶段的分类过程是更为精细的分类操作。受Wang 等\cite{Wang2012End} 提出的利用卷积神经网络(CNN) 作端对端文字识别方法的启发，在精细分类阶段我们提出一种基于CNN 的文字边缘骨架分类器，用于滤除掉遗漏下来的非文字边缘骨架。这个基于CNN 的边缘骨架分类器的架构如图\ref{fig.c3_cnn}所示，其网络结构是由2 个卷积层，分别后接2 个池化层，最后连1 个全连接层构成。其中第1 个卷积层有$n_1 = 64$ 个卷积模板，第2 个卷积层有$n_2 = 128$ 个卷积模板。全连接层后接2 个类别，分别为文字边缘和非文字边缘类别。2 类中置信度更高的类别即为分类判别结果。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{c3_cnn.jpg}
         \caption{单尺度卷积神经网络分类器的架构} \label{fig.c3_cnn}
-        \end{figure}
+        \end{figure*}
 
         这个CNN网络结构的输入是例如图\ref{fig.c3_cnn} 中最左边的小图块。这些小图块，是由经过第1阶段分类后被判别为候选文字边缘骨架的包围框，在原图上截取下来的小图块组成。在训练阶段，将这些图块的大小调整成$32 \times 32$ 个像素大小的训练样本，输入到CNN 网络中。然后在第1 个卷积层中，得到$25 \times 25 \times n_1$个卷积响应。接着在平均池化层，将响应的维度缩减到$5 \times 5 \times n_1$。 类似地，经过第2个卷积层和池化层处理后，得到$2 \times 2\times n_1$ 的响应，并全连接到最后的分类层。训练网络时用squared hinge loss 作为损失函数。
 
@@ -321,7 +321,7 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f 值，如下列公式所示：
+        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$ 到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f 值，如下列公式所示：
 
         $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
 
