--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -27,7 +27,7 @@
 
     \section{问题的提出}
     \esection{Questions Posed}
-    
+
     虽然上一章提出的基于边缘骨架切割的文字检测子取得了很高的查全率，但是定位到的文字包围盒的重叠可能达不到要求，而导致文字定位不够精准。尽管重叠率为0.5对于一般目标检测的结果而言是正常的，但对于场景文字检测和识别来说，这种程度的重叠率是不能令人满意的。尤其是当文字包围盒的一个边界被精确地预测到，但另一个边界与ground truth 的差距很大时，重叠率依然可能达到0.5以上，但此时的文字定位效果非常差。如图\ref{fig.c4_overlap}所示，这两个预测的文字包围盒均与真实值达到了0.5之上的重叠面积，且有一条边界（宽或高）是被精确预测到了，但是对于文字来说这种程度的重叠率所检测到的是残缺了很大一部分的结果，因此不能满足文字检测的要求，更无法用作文字识别的输入。但难点是这两个包围盒中都包含有一部分文字，因此它们在上一章方法里的分类器中都没有被过滤掉，故而造成图\ref{fig.c4_overlap} 的问题。
 
     \begin{figure*}[!h]
@@ -42,7 +42,7 @@
     \caption{当检测到的包围盒与ground truth的重叠率达到0.5 时，依然可能出现定位不精准的问题}
     \label{fig.c4_overlap}
     \end{figure*}
-    
+
     针对上述问题，本章提出一种基于二叉树搜索的文本行定位优化框架，用来调整候选文字包围盒与ground truth 的重叠率以提升文字检测和识别效果。该框架包含3个步骤：第1步是对所有的候选文字包围盒进行统计边缘响应（Static Skeleton-box Response，简称SSR算法），然后对计算得到的SSR求取梯度并执行NMS操作，以获得候选文本行；第2步是将候选文本行的所有可能的排列组合方式构建成一个二叉树型搜索空间；第3步是仿照二叉树的后续遍历算法从搜索空间中找到一条最优路径，该路径对应着优化后的文字定位包围盒。值得注意的是在搜索最优文字定位的过程中还利用到了文字识别的结果，而经过该算法调优后的文字定位结果又进一步提升识别文字的精度。本章接下来内容会详细论述这一优化框架。
 
     \section{方法原理与步骤}
@@ -102,7 +102,7 @@
 
         其中$rs$指代的是响应小块，它的底面积是1 个定位包围框$b$，而高是$b$ 对应的置信度分数$c$。将所有的这些响应小块$rs$ 堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \begin{minipage}[t]{0.37\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_img.jpg}
@@ -120,7 +120,7 @@
         \end{minipage}
         \caption{在统计边缘响应中，文本区域与背景可以被区分开；而且通过后续的对统计边缘响应的水平映射操作，文本行也可以进一步区分开彼此}
         \label{fig.c4_static_skeleton_response}
-        \end{figure}
+        \end{figure*}
 
         为了后续提取候选文本行的操作，首先要利用公式\ref{eq:c4_horizontal_projection} 来计算统计边缘响应$s$ 的横向投影$hp$，如图\ref{fig.c4_static_skeleton_response}(c) 所示。
 
@@ -136,7 +136,7 @@
 
         在上1小节中得到了统计边缘响应$s$ 的横向投影$hp$, 它的数值如图\ref{fig.c4_candidate_line_construction}(a) 中的蓝色曲线所示，从中可看出候选文本行之间的响应有着明显的起伏变化。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \begin{minipage}[t]{0.32\linewidth}
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_gradient.jpg}
@@ -154,7 +154,7 @@
         \end{minipage}
         \caption{通过梯度计算和非极大值抑制操作来粗略定位文本行}
         \label{fig.c4_candidate_line_construction}
-        \end{figure}
+        \end{figure*}
 
         为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$ 上这些对应的位置上不存在文字区域与背景区域间的边界。
 
@@ -165,7 +165,7 @@
 
     将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$ 由$m$ 条红线$l_i, i=1,2,...,m$ 构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1 个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
 
-    \begin{figure}[!h]
+    \begin{figure*}[!h]
     \centering
     \includegraphics[width=\textwidth]{./figures/c4_binary_tree_construction.jpg}
     \begin{minipage}[t]{0.40\linewidth}
@@ -176,7 +176,7 @@
     \end{minipage}
     \caption{从候选文本行中建立起代表搜索空间的二叉树型数据结构}
     \label{fig.c4_binary_tree_construction}
-    \end{figure}
+    \end{figure*}
 
     假设红色分割线$l_i$有2个属性：距离$ld_i$ 和置信度$lc_i$。 其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$ 是分割线$l_i$的置信度，其数值是由$l_i$ 的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
@@ -258,7 +258,7 @@
 
         以上过程是算法\ref{alg:c4_binary_tree_search} 的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$ 个三元组$p$的路径集合$P$就被构建了出来。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_bianry_tree_search.jpg}
         \begin{minipage}[t]{0.33\linewidth}
@@ -272,7 +272,7 @@
         \end{minipage}
         \caption{1个从二叉树型搜索空间中找到最优路径的示例}
         \label{fig.c4_bianry_tree_search}
-        \end{figure}
+        \end{figure*}
 
         为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search} 所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a) 中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7 个结点；然后采用算法\ref{alg:c4_build_binary_tree} 在$N$ 上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b) 所示；最后，算法的每次迭代，都会生成1 个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c) 所示的路径集合，即为算法\ref{alg:c4_binary_tree_search} 的搜索结果。
 
@@ -290,7 +290,7 @@
 
         对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b) 所示的2 阶段的判别步骤，而判别的依据是结点$n_6,n_7$ 以及$n_5$ 的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading} 的深度学习文字识别网络。我们按照结点的范围区域$nr$ 来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
-        \begin{figure}[!h]
+        \begin{figure*}[!h]
         \centering
         \includegraphics[width=\textwidth]{./figures/c4_search_strategy1.jpg}
         \centerline{\small (a) 1个被搜索到的路径三元组：其中每个结点代表1个候选文本行区域 }
@@ -298,7 +298,7 @@
         \centerline{\small (b) 对路径三元组的剪枝或融合策略}
         \caption{ 1个搜索策略的示例}
         \label{fig.c4_search_strategy}
-        \end{figure}
+        \end{figure*}
 
         具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
@@ -423,9 +423,9 @@
 
     \section{本章小结}
     \esection{Brief Summary}
-    
+
     本章提出的是基于二叉树搜索的文字检测方法。首先对于输入的场景文字图片，利用上一章提出检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，在本章中提出一种统计边缘响应算法，接着通过对统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于上一章得到的粗略定位结果而言，其文字检测的精度得到了大幅提升。
-    
+
     在ICDAR系列测试集以及谷歌街景数据集SVT上，我们将本章提出的方法与其它先进方法以及上一章的方法都做了对比实验。实验结果验证了本章方法的有效性。
 
 
