--- a/meta_text.tex
+++ b/meta_text.tex
@@ -59,8 +59,8 @@
 \ekeywords{scene text detection; coarse to fine; text Skeleton-cut; Static skeleton response; Binary tree based Search}
 
 % 学科门类，英文
-% 从Philosophy（哲学）、Economics（经济学）、Law （法学）、Education（教育学）、Arts（文学）、
-%   Science（理学）、Engineering Science（工学）、Medicine（医学）、Management Science（管理学）中选择
+% 从Philosophy（哲学）、Economics（经济学）、Law （法学）、Education （教育学）、Arts（文学）、
+%   Science（理学）、Engineering Science（工学）、Medicine （医学）、Management Science（管理学）中选择
 \ecate{Engineering Science}
 
 % 提交日期，英文，本科生不需要
@@ -75,6 +75,14 @@
 
 % 摘要，中文。段间空行
 \cabstract{
+
+自然场景图像中的文字是可以存储和记录语义信息的图像符号，它出现在日常生活中的方方面面，扮演着重要的角色。因而对场景图像中的文字进行精确定位及检测是目标检测领域的研究热点，其能被广泛应用到基于内容的多媒体检索，无人驾驶与智能导航平台，辅助盲人行动系统以及工业自动化等多种人工智能应用场景。但是想要从场景图像中精准地检测到文字是一项极具挑战性的工作，其难点主要体现在：复杂的自然场景中存在遮挡、阴影、对比度低等环境的影响；文字自身存在排列方向、大小、语种、颜色、字体等方面的多样性变化；场景图像被采集时因光照等环境条件影响而导致的退化和失真等质量欠佳问题。本文针对场景文字检测存在的问题对现有方法进行调研和分析，并提出下面两种有效的场景文字检测方法：
+
+首先针对边缘粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法：对于输入的场景文字图片，利用结构化边缘检测方法得到边缘响应图，然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。因此断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于 CNN 的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。虽然基于边缘骨架切割的文字检测子取得了很高的查全率，但是定位到的文字包围盒的重叠可能达不到要求，而导致文字定位不够精准。
+
+为了更准确的定位到文字，本文接着提出一种基于二叉树搜索的文字检测方法。首先对于输入的场景文字图片，利用基于边缘骨架切割的文字检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，首先对候选文字包围盒计算统计边缘响应，接着通过对求取到的统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割文字检测子的粗略定位结果而言，该方法的文字检测精度得到了大幅提升。
+
+
 
 }
 
