--- a/meta_text.tex
+++ b/meta_text.tex
@@ -55,12 +55,12 @@
 % 导师姓名，英文
 \esupervisor{Senior Engineer Yonghong Song }
 
-% 关键词，英文。用半角分号和一个半角空格「; 」分割
+% 关键词，英文。用半角分号和一个半角空格「; 」 分割
 \ekeywords{scene text detection; coarse to fine; text Skeleton-cut; Static skeleton response; Binary tree based Search}
 
 % 学科门类，英文
-% 从Philosophy（哲学）、Economics（经济学）、Law （法学）、Education （教育学）、Arts（文学）、
-%   Science（理学）、Engineering Science（工学）、Medicine （医学）、Management Science（管理学）中选择
+% 从Philosophy（哲学）、Economics （经济学）、Law （法学）、Education （教育学）、Arts（文学）、
+%   Science（理学）、Engineering Science （工学）、Medicine （医学）、Management Science （管理学）中选择
 \ecate{Engineering Science}
 
 % 提交日期，英文，本科生不需要
@@ -69,7 +69,7 @@
 
 % 论文类型，英文，本科生不需要
 % 从Theoretical Research（理论研究）、Application Fundamentals （应用基础）、Applied Research（应用研究）、
-%   Research Report（研究报告）、Software Development（软件开发）、Design Report（设计报告）、
+%   Research Report（研究报告）、Software Development （软件开发）、Design Report （设计报告）、
 %   Case Study（案例分析）、Investigation Report （调研报告）、其它（Other）中选择
 \etype{Applied Research}
 
@@ -82,7 +82,7 @@
 
 为了更准确的定位到文字，本文接着提出一种基于二叉树搜索的文字检测方法。首先对于输入的场景文字图片，利用基于边缘骨架切割的文字检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，首先对候选文字包围盒计算统计边缘响应，接着通过对求取到的统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割文字检测子的粗略定位结果而言，该方法的文字检测精度得到了大幅提升。
 
-本文将提出的两种方法分别在ICDAR2011，ICDAR2013以及MSRA-TD500等测试集上与相关方法进行了对比实验与结果统计，实验结果证明了本文提出方法的鲁棒性。此外，本文还在更具挑战性的SVT数据集上对提出算法进行了测试以及结果的对比，由此来证明本文算法的实用性和可靠性。
+本文将提出的两种方法分别在ICDAR2011，ICDAR2013以及MSRA-TD500 等测试集上与相关方法进行了对比实验与结果统计，实验结果证明了本文提出方法的鲁棒性。此外，本文还在更具挑战性的SVT数据集上对提出算法进行了测试以及结果的对比，由此来证明本文算法的实用性和可靠性。
 
 }
 
@@ -92,5 +92,9 @@
 Text in natural scene is an image symbol that can store and record semantic information. It plays an important role in every aspect of daily life. Scene text detection is a hot research topic in the field of object detection, which can be widely applied to content based retrieval, intelligent unmanned platform, auxiliary blind system, industrial automation and other artificial intelligence applications. But precisely detecting the text is a challenging task in the scene image because of the following difficulties: Occlusion, shadows and low contrast conditions in complex natural scenes; Text's various orientation, size, color, font and language; Image' degradation and distortion. In this paper, we first investigated and analyzed the existing methods, and then proposed the following two effective methods:
 
 Firstly, this paper proposed the skeleton-cut method to solve the edge-adhesion problem. We used structured edge detection method to get edge response, then a series of binary edge maps are obtained by segmentation. Then the skeleton map is obtained by the thinning operation, and the skeleton-junctions are found through the analysis of the 8 neighborhoods algorithm. We disconnect the skeleton-junctions to get the candidate text skeletons, and then filter out most of the non-text skeletons. The remaining undistinguishable non-text skeletons can be further filtered through CNN-based classifier. Finally, based on the non maximum suppression and the text lines aggregation operation, the text location results are obtained. Although the text detection method based on skeleton-cut algorithm has achieved high recall, the overlap of the text bounding box may not meet the requirement, and the detection result of the text is not accurate enough.
+
+In order to locate the text more accurately, this paper then proposes a text detection method based on binary tree search. First of all, for the input scene text image, the rough candidate text bounding box results are extracted by skeleton-cut detector. However, the overlap rate is not meet the requirement. In order to further improve the accuracy of text detection, we first calculate the static skeleton-box response form the candidate text bounding boxes , and then the candidate text lines are obtained form the response by horizontal projection, gradient and non maximum suppression operation. Finally, the binary-tree-based search space is built from candidate text lines, and the optimal result is found from the search space according to the optimization strategy.
+
+The two methods proposed in this paper are compared with the related methods on ICDAR2011, ICDAR2013 and MSRA-TD500 test set respectively, and the experimental results prove the robustness of our methods. In addition, this paper also get the results of the proposed methods on the more challenging SVT dataset, which proves the practicability and reliability of the algorithm.
 
 }
