--- a/master_text.tex
+++ b/master_text.tex
@@ -90,7 +90,7 @@
 
     \xjtucontent
         \input{pages/chapter1.tex}
-        %\input{pages/chapter2.tex}
+        \input{pages/chapter2.tex}
         \input{pages/chapter3.tex}
         %\input{pages/chapter4.tex}
         %\input{pages/chapter5.tex}
