--- a/pages/chapter6.tex
+++ b/pages/chapter6.tex
@@ -35,4 +35,12 @@
 
     \section{展望}
     \esection{Future Work}
+    
+    本文提出的方法虽然能够对自然场景中多种文字进行鲁棒的检测，但是仍然难以处理一些诸如文字被背景遮挡、对比度过低或曝光影响等极端条件下的文字检测场景。针对上述这些待改进或解决的问题，计划从下面几个方面展开研究：
+    
+    1）本文提出方法距实际应用还有一段距离：在ICDAR2013上的查全、查准和f值分别为89.2\%，75.5\%以及82.3\%，而在MSRA上的成绩分别为64\%，82\%和72\%，因此还有较大的提升空间。下一步可以继续结合深度学习到文字检测中，以提高本文方法在准确度方面的成绩。
+    
+    2）本文提出的方法适用于英文文本行以及较为平直的文本行的检测，但对其它诸如阿拉伯文、日韩文、蒙古文等多语种和倾斜度高的文字的检测结果欠佳。因此需要对多语种和倾斜文字情况进行继续的研究。
+    
+    3）随着场景文字检测和识别领域研究的发展，人们更加关注的是对文字信息的识别和提取。因此可以研究一种检测的同时执行识别，并通过识别反过来提升检测效果的端对端文字识别系统。
 
