--- a/master_text.tex
+++ b/master_text.tex
@@ -92,7 +92,7 @@
         \input{pages/chapter1.tex}
         \input{pages/chapter2.tex}
         \input{pages/chapter3.tex}
-        %\input{pages/chapter4.tex}
+        \input{pages/chapter4.tex}
         %\input{pages/chapter5.tex}
         \input{pages/chapter6.tex}
     \xjtuendcontent
