--- a/pages/acknowledgements_text.tex
+++ b/pages/acknowledgements_text.tex
@@ -20,4 +20,12 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 
+研究生生活转眼就要接近尾声了，回首在西安交通大学七年的时光，心中倍感充实。我感谢这三年来老师们对我知识的传授、同学们对我友爱的表达，家人对我的亲切关怀。在此向所有支持和帮助过我的人表示由衷的感谢。
 
+我首先想感谢的是我的指导老师，宋永红老师和张元林老师。从我的论文选题、开题、撰写、到论文的定稿，这一路走来，每一步都离不开老师的谆谆教诲和悉心关怀。两位老师治学严谨、知识渊博、谦虚平和，与老师的每一次谈话都让我受益匪浅。老师教会我的不仅是做学问的态度，更重要的是为人处事的方式，我将带着这些在接下来的工作和生活中继续努力，让自己变得更加优秀。
+
+感谢施乐组所有的兄弟姐妹：王晓兵师兄、张云师兄、郁冲师兄、龚晨师兄、梁朝寓师兄、冯媛媛师姐、李伟师兄、尚玉飞师兄、陈奇师兄、段露师姐、刘衍峰师兄、魏盛华、赵路、张值、戴觊婧、李晓玉、杜鹏、任泽宇、吴晨、杨柳、张晗、陈敬军、米泽双、王鑫、魏儒波。因为有你们，我才有三年丰富的研究生生活。
+
+感谢我的家人为我的付出和对我无微不至的关怀，为我创造了如此优越的学习和生活环境。无论我身在何方，开心或是沮丧，成功或是失败，你们都在我背后默默支持着我、鼓励着我。你们是我奋斗的动力，我会努力让你们为我骄傲。
+
+最后，衷心感谢在百忙之中抽出时间评阅本论文的专家们， 不足之处，请批评指正。
