--- a/pages/chapter3.tex
+++ b/pages/chapter3.tex
@@ -31,7 +31,7 @@
 
     基于区域和基于连通部件的文字检测方法各有优缺点。其中，基于区域方法的检测结构可在噪声环境中精准提取到文字，这是因为这些方法在图像上大多采用滑动窗进行细致的探索，并执行多尺度的处理来提取特征。但相应地就会导致分类窗口过多，计算量太大，对时间性能的要求也更高；而另一类方法的处理目标是连通部件，其数量相比滑动窗要更可控，因此处理时间大为缩短，并且其检测到的结果可直接应用到识别文字的阶段。但此类方法的问题是在曝光或低对比度环境中难以从背景中分离出连通区域，并且过于依赖图像分割算法的结果。如何对这两类方法折衷，以在保证精准的文字检测效果的同时还能达到较高的效率，是一个值得深入研究的问题。
 
-    在基于区域的文字检测方法中主要有基于MSER和基于边缘的这两类主流方法。MSER类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
+    在基于区域的文字检测方法中主要有基于MSER和基于边缘的这两类主流方法。MSER类方法存在的问题有：当文字位于玻璃、浮雕等反光物体的表面时将无法作为极值区域被提取出来；采用ER树生成候选的文字区域会导致重复、嵌套和计算量过大等问题；用来过滤ER的启发式规则用到许多固定阈值。而基于边缘的方法对图像边缘提取的结果比较敏感，如果存在背景与文字边缘粘连问题，或不能完整提取文字边缘时，就很难进行后续的文字检测的分析，并造成漏检问题。针对上述的这些问题，一种解决办法便是利用文字自身的双边属性，而采用基于边缘的方法对此属性进行最佳的表征，然后再融合上MSER的方法来提取候选文字的感兴趣区域proposals，最后在这些proposals中进行单尺度滑动窗的变化并输入到CNN 分类器中作分类。那么其中最关键的步骤就是解决背景与文字的边缘粘连问题，以提取出完整的文字边缘。
 
     依据以上提出的问题及对其的分析，本文提出了一种基于边缘骨架切割的文字检测方法。首先求取场景文字图片的边缘骨架图，并在其上利用8 连通域分析方法找到文字边缘和背景边缘的粘连点。然后自适应地断开这些粘连点，并将分离开来候选文字边缘骨架段输入到两阶段的CNN分类器中作文字与非文字的判别。最后提出一种结合MSER的局部迭代优化算法来提高文字检测的准确度。
 
@@ -321,11 +321,24 @@
         \subsection{实验数据集与评价标准}
         \esubsection{Data-set and Evaluation Protocol}
 
-        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$ 到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision和f 值，如下列公式所示：
+        为了验证本章提出的文字检测子的效果，将该检测子运行在自然场景文字测试集ICDAR 2013 上。这个测试集合包含462 张标注的自然场景文字图片，其中有229张图片用以训练，而233 张图片用于测试。该测试集合非常具有挑战性：因为图片存在光照不均、尺度不同(尺度范围从$459 \times 405$ 到$3888 \times 2592$) 的问题，而且文字也存在不同字体和颜色的问题。此外还利用了MSRA-TD500 测试数据集来验证本方法在多方向和多语种文字图像样本上的检测效果。最终使用Wolf 等\cite{Wolf2006Object}提出的评价标准来验证本方法的文字检测结果。评价标准包括：查全recall，查准precision 和f 值，这些概念来源于信息检索领域(Information Retrieval,IR)。
 
-        $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
+        其中查全率recall代表的含义是真值ground truth中的东西被提取出来的比例：
+        \begin{equation}
+        recall=\frac{N.o. \quad True Positives}{N.o. \quad Ground truth}
+        \end{equation}
 
-        最后文字检测$f$值就是查全recall和查准precision 的均值。
+        而精度precision表示检测到的东西是正确的比例：
+        \begin{equation}
+        precision=\frac{N.o. \quad True Positives}{N.o. \quad Retrieved Items}
+        \end{equation}
+
+        其中，符号N.o是数量Number of的首字母缩写。最后综合指标F-mean（也可记为F-score）是查全recall和查准precision的调和平均数（Harmonic mean）,该指标用以衡量算法的综合性能：
+        \begin{equation}
+        F=\frac{2}{\frac{1}{recall}+\frac{1}{precision}}=\frac{2recall*precsion}{recall+precision}
+        \end{equation}
+        
+        
 
         \subsection{实验结果与分析}
         \esubsection{Experimental Results and Analysis}
@@ -378,7 +391,7 @@
         \label{tab.c3_icdar11}
         \end{table*}
 
-        在候选字符数目与字符检出率的折衷方面做的较好的是Sung 等\cite{Sung2015Scene} 提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9 万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung 的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
+        在候选字符数目与字符检出率的折衷方面做的较好的是Sung 等\cite{Sung2015Scene} 提出的方法。这个方法首先在提取极值区域ER 的初始阶段保证了89\% 的高检出率，同时候选字符的数目也维持在较低的水平。接着在后续阶段此方法继续大幅降低候选字符的数量直到9 万多个，而检出率也仅下降了2\% 而已。从结果上来看，Sung 的方法可以说既保证了文字检查的高查全率，同时还兼顾了检出文字的高水平查准效果。而本章提出的方法进一步加大了这种高查全兼顾高查准的优势：在使检出率高于Sung的方法的同时，又使候选字符的数目相对于Sung 的方法降低了1 个量级。因此从在ICDAR 2011测试集上的字符检测结果来说，本章提出方法优于其它先进的文字检测方法。
 
         \begin{table*}[!h]
         \centering
